--- a/app/scripts/modules/home/home.html
+++ b/app/scripts/modules/home/home.html
@@ -1,5 +1,5 @@
 <ul>
-	<li><a ui-sref="app.calculate-tax">Calculate Tax</a></li>
+	<li><a ui-sref="app.assessment-year">Calculate Tax</a></li>
 	<li><a href="">History</a></li>
 	<li><a href="">About</a></li>
 </ul>
